# metnum-tp1

./: CMakeLists.txt  Experimentacion parte1.ipynb  Experimentacion parte2.ipynb  correrexperimentacion.py  main.cpp
datasets/: test_15_segundos.txt.own.out  test_30_segundos.txt.own.out  test_5x5.txt.own.out  test_aleatorio_desordenado.txt.own.out  test_aleatorio_desordenado.txt.own.out2
model/: LILMatrix.cpp  LILMatrix.h  test1.py  test2.py
test/: CMakeLists.txt  LILMatrix_tests.cpp
tests/: test_3.0_base.txt  test_3.1_ownpage_1link.txt  test_3.1_ownpage_2link.txt  test_3.1_ownpage_3link.txt  test_3.1_ownpage_4link.txt  test_3.1_ownpage_5link.txt  test_3.1_ownpage_6link.txt  test_3.2_ownpage_6link_2links.txt  test_3.2_ownpage_6link_4links.txt  test_3.2_ownpage_6link_6links.txt  test_3.3_ownpage_2link.txt  test_3.3_ownpage_3link.txt  test_3.3_ownpage_4link.txt  test_3.3_ownpage_5link.txt  test_3.3_ownpage_6link.txt  test_la_garra.txt
